--- a/Solution/HomeWork/MainWindow.xaml
+++ b/Solution/HomeWork/MainWindow.xaml
@@ -5,23 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HomeWork" 
         xmlns:viewmodel="clr-namespace:HomeWork.ViewModels"
+        xmlns:converters="clr-namespace:HomeWork.Converters"
         xmlns:controls="clr-namespace:HomeWork.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <ResourceDictionary>
+            <converters:RouteRirectinoConverter x:Key="routeRirectinoConverter" />
+        </ResourceDictionary>
+    </Window.Resources>
     <Window.DataContext>
         <viewmodel:GameViewModel />
     </Window.DataContext>
     <StackPanel Orientation="Horizontal">
         <ListView
-            ItemsSource="{Binding LeftSide, Mode=OneTime}">
+            SelectionMode="Single"
+            ItemsSource="{Binding LeftSide, Mode=OneTime}"
+            SelectedItem="{Binding SelectedPassanger, Mode=OneWayToSource}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <controls:ImagePresenter />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <Button 
+            Width="80"
+            Height="18"
+            Command="{Binding MoveToOtherSide}" 
+            Content="{Binding RouteDirection, Mode=OneWay, Converter={StaticResource routeRirectinoConverter}}" /> 
         <ListView
-            ItemsSource="{Binding RightSide, Mode=OneTime}">
+            SelectionMode="Single"
+            ItemsSource="{Binding RightSide, Mode=OneTime}"
+            SelectedItem="{Binding SelectedPassanger, Mode=OneWayToSource}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <controls:ImagePresenter />
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
     </StackPanel>
 </Window>
